# smart-room-env

./: .gitignore  Blog.md  Dockerfile  README.md  Training_Evidence.ipynb  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  smart_room_ai_final.pth  train_dqn.py  train_grpo.py  user_memory.json
analytics/: logger.py
core/: llm_planner.py  memory.py  multi_agent.py  reward.py  rules.py  supervisor.py
data/: smartroom.db
server/: app.py
src/core/: env_server.py
src/envs/smart_room/: client.py  models.py
