[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-room-automation-openenv"
version = "0.1.0"
description = "Smart Room Automation Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]